Migrate to Java 11+ HTTPClient to support HTTP/2